fix(verification): order names by code point and word properties as the reference does
Reports, witnesses and flat indexes compare names by Unicode code point in every language.
Java's state-class graph keeps build order and holds each class once; Rust markings are a sorted vector of shared names.